# FraudDetection

./: .dockerignore  .dockeringore  .dvcignore  .gitignore  .readthedocs.yaml  DEMO.PY  Dockerfile  LICENSE  README.md  afile.npy  app.py  compose.yml  conda.yaml  docker compose.yml  docker-compose-local.yml  dvc.yaml  init_setup.sh  kaggle.json  mlflowapp.py  pyproject.toml  pyproject_poetry.toml  remove_file_pycache.sh  requirements.txt  requirements0701.txt  requirements_deploy.txt  requirements_dev.txt  setup.cfg  setup.py  template.py  tox.ini  trainningapp.py  trial codes
.github/workflows/: aws.yml  jekyll-gh-pages.yml  publish-to-git-pages.yml  update-gh-pages.yml
.kaggle/: kaggle.json
.streamlit/: config.toml  secrets.toml
apps/: app.py  mlflowapp.py  trainingapp.py
aws-deployment/: Dockerfile.aws
configs/: config.yaml  model.yaml  project.yaml  schema.yaml
configs/archive/: model_config_v1.yaml
docs/: CNAME  README.rst  conf.py  fraudDetection.rst  fraudDetection.snowflake.rst  index.rst  modules.rst  requirements.txt
docs/source/: README.rst  apps.rst  conf.py  configs.rst  considerations.rst  fraudDetection.components.prediction.rst  fraudDetection.constants.rst  fraudDetection.entity.rst  fraudDetection.exception.rst  fraudDetection.rst  fraudDetection.utils.rst
docs/source/_static/: README.md  conf.py
documentation/: Notes  metrics.txt  models
kaggle/: kaggle.json
mlflow/: Dockerfile
notebook/: eda.ipynb  mlflow.ipynb  teestcode  test.ipynb  trial3.ipynb  trials.ipynb  trials1.ipynb
src/fraudDetection/components/: __init__.py  data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/fraudDetection/components/prediction/: prediction_service.py
src/fraudDetection/components/training/: data_ingestion.py  data_transformation.py  model_pusher.py  (+3 more)
src/fraudDetection/config/: configuration.py
src/fraudDetection/constants/: __init__.py
src/fraudDetection/entity/: __init__.py  artifact_entity.py  config_entity.py  experiment.py  model_entity.py  model_factory.py
src/fraudDetection/exception/: __init__.py
src/fraudDetection/logger/: __init__.py
src/fraudDetection/pipeline/: __init__.py  pipeline.py
src/fraudDetection/utils/: __init__.py
tests/unit/: test_configuration_manager.py
