[metadata]
license = MIT
license_file = LICENSE 
classifier = 
    Programming Language :: Python ::3.10
    Operating System :: OS Independent
    Business :: Financial :: Banking
    Intended Audience :: Financial
    Framework :: Pydantic :: 1
    Development Status :: 4 - Beta
[options]
install_requires = 
    ensure 
python_requires = >=3.10

[options.extras_require]
testing = 
    pytest
    mypy
    flake8
    tox
    black
[options.package_data]
fraudDetection = py.typed

[flake8]
max-line-length = 160
exclude = __init__.py

