# setup.cfg - Configuration file for package metadata and options

[metadata]
# Metadata information for the package
license = MIT
license_file = LICENSE 
classifier = 
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Business :: Financial :: Banking
    Intended Audience :: Financial
    Framework :: Pydantic :: 1
    Development Status :: 4 - Beta

[options]
# Package options and dependencies
install_requires = 
    ensure 
python_requires = >=3.10

[options.extras_require]
# Additional dependencies for testing
testing = 
    pytest
    pylint
    tox
    black

[options.package_data]
# Include type hints for package
fraudDetection = py.typed

[pylint]
# Pylint configuration for linting
max-line-length = 160
exclude = __init__.py
